# feint

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  TODO.md  aliases  block.fi  build.rs  conditionals.fi  example.fi  example.in  grammar.txt  more-examples.fi  rustfmt.toml  source.rs  temp.py  test.py
.github/workflows/: book.yaml
doc/: README.md  book.toml
doc/src/book/: SUMMARY.md  intro.md  operators.md
examples/: assignments.fi  block.fi  builtins.fi  closures.fi  conditionals.fi  custom.fi  err.fi  example.fi  fib.fi  files.fi  fizzbuzz.fi  format-strings.fi  functions.fi  imports.fi  iterators.fi  loop.fi  main.fi  mandlebrot.fi  match.fi  overflow.fi  read_file.fi  reassignment.fi  seq.fi  str.fi  tuple.fi  type-hints.fi
feint-builtins/: Cargo.toml  build.rs
feint-builtins/src/: lib.rs  util.rs
feint-builtins/src/modules/: mod.rs
feint-builtins/src/modules/std/: args.fi  list.fi  map.fi  mod.rs  proc.rs  std.fi  std.rs  test.fi  tuple.fi
feint-builtins/src/tests/: types.rs
feint-builtins/src/types/: always.rs  base.rs  bool.rs  bound_func.rs  cell.rs  class.rs  closure.rs  code.rs  custom.rs  err.rs  err_type.rs  file.rs  float.rs  func.rs  func_trait.rs  int.rs  intrinsic_func.rs  iterator.rs  list.rs  map.rs  mod.rs  module.rs  new.rs  nil.rs  ns.rs  prop.rs  seq.rs  str.rs  tuple.rs  util.rs
feint-cli/: Cargo.toml  build.rs
feint-cli/src/: cli.rs  main.rs  repl.rs
feint-cli/src/tests/: repl.rs
feint-code-gen/: Cargo.toml
feint-code-gen/src/: lib.rs
feint-compiler/: Cargo.toml
feint-compiler/src/: format.rs  lib.rs
feint-compiler/src/ast/: ast.rs  mod.rs  visitors.rs
feint-compiler/src/compiler/: compiler.rs  mod.rs  result.rs  visitor.rs
feint-compiler/src/parser/: mod.rs  parser.rs  precedence.rs  result.rs
feint-compiler/src/scanner/: keywords.rs  mod.rs  result.rs  scanner.rs  token.rs
feint-compiler/src/tests/: ast.rs  format.rs  mod.rs  parser.rs  scanner.rs
feint-driver/: Cargo.toml
feint-driver/src/: driver.rs  lib.rs  result.rs
feint-driver/src/tests/: driver.rs  mod.rs  run.rs
feint-util/: Cargo.toml
feint-util/src/: lib.rs  op.rs
feint-util/src/tests/: stack.rs
feint-vm/: Cargo.toml
feint-vm/src/: context.rs  dis.rs  lib.rs  result.rs  tests.rs  vm.rs
scripts/: make-type.fi  type.template
src/: ast.rs  cli.rs  config.rs  dis.rs  exe.rs  format.rs  frame.rs  grammar.txt  instructions.rs  keywords.rs  lib.rs  main.rs  op.rs  opcodes.rs  operators.rs  parser.rs  repl.rs  result.rs  run.rs  scanner.rs  source.rs  stack.rs  tokens.rs  types.rs  vm.rs
src/ast/: ast.rs  mod.rs  tests.rs  visitors.rs
src/builtin_funcs/: assert.rs  file.rs  float.rs  int.rs  mod.rs  print.rs  specs.rs  tuple.rs  types.rs
src/builtins/: boolean.rs  float.rs  int.rs  kind.rs  method.rs  mod.rs  object.rs
src/compiler/: compiler.rs  mod.rs  result.rs  scope.rs  visitor.rs
src/modules/: args.fi  bootstrap.rs  builtins.fi  builtins.rs  file.rs  mod.rs  proc.rs  system.fi  system.rs
src/modules/std/: args.fi  builtins.fi  builtins.rs  mod.rs  proc.rs  std.fi  std.rs  system.fi  system.rs
src/native/: file.rs  mod.rs  print.rs  result.rs  types.rs
src/old_type_system/: custom.rs  int.rs  mod.rs  namespace.rs  result.rs  tuple.rs
src/parser/: mod.rs  parser.rs  precedence.rs  result.rs  tests.rs
src/scanner/: keyword.rs  keywords.rs  location.rs  mod.rs  operator.rs  result.rs  scanner.rs  tests.rs  token.rs
src/stdlib/: bool.fi  float.fi  int.fi  int.in  prelude.fi  print.fi  string.fi
src/tests/: ast.rs  exe.rs  format.rs  mod.rs  parser.rs  repl.rs  run.rs  scanner.rs  stack.rs  types.rs  util.rs  vm.rs
src/type_system/: base.rs  bool.rs  builtin_func.rs  builtins.rs  class.rs  create.rs  custom.rs  float.rs  func.rs  int.rs  mod.rs  module.rs  nil.rs  ns.rs  result.rs  str.rs  tuple.rs
src/types/: always.rs  base.rs  bool.rs  bound_func.rs  builtin_func.rs  builtin_types.rs  builtins.rs  cell.rs  class.rs  closure.rs  complex.rs  create.rs  custom.rs  err.rs  err_type.rs  error.rs  error_type.rs  file.rs  float.rs  func.rs  func_trait.rs  function.rs  gen.rs  int.rs  intrinsic_func.rs  iterator.rs  list.rs  map.rs  meth.rs  mod.rs  module.rs  modules.rs  namespace.rs  native.rs  new.rs  nil.rs  ns.rs  object.rs  prop.rs  result.rs  (+7 more)
src/types/builtins/: bool.rs  cmp.rs  float.rs  int.rs  mod.rs  nil.rs  string.rs  types.rs
src/types/builtins/builtin_object_derive/: Cargo.toml
src/types/builtins/builtin_object_derive/src/: lib.rs
src/util/: binop.rs  call.rs  mod.rs  operators.rs  source.rs  stack.rs  string.rs
src/vm/: arena.rs  code.rs  compiler.rs  constant.rs  constants.rs  context.rs  frame.rs  globals.rs  inst.rs  instruction.rs  mod.rs  namespace.rs  objects.rs  result.rs  types.rs  vm.rs
template/: README.md  package.toml
template/dependencies/: README.md
template/docs/: index.md
template/src/: api.fi  main.fi
template/src/lib/: type.fi
