[package]
name = "feint"
version = "0.0.0"
authors = ["Wyatt Baldwin <code@wyattbaldwin.com>"]
description = "Programming language, bytecode-esque compiler, and stack-based VM"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/feint-lang/"
repository = "https://github.com/feint-lang/feint"

[dependencies]
bitflags = "1.3.2"
clap = { version = "~4.0.32", features = ["env"] }
ctrlc = "~3.2.4"
dirs = "~4.0.0"
env_logger = "~0.10.0"
indexmap = "~1.9.2"
log = { version = "0.4.17", features = ["release_max_level_off"] }
num-bigint = "~0.4.3"
num-traits = "~0.2.15"
once_cell = "1.17.0"
regex = "~1.7.1"
rustyline = "~10.0.0"

# Profiling
#
# - uncomment config below
# - cargo install flamegraph
# - cargo flamegraph --root -- example/fib.py 30
#
# [profile.release]
# debug = true
