[package]
name = "feint-builtins"
edition.workspace = true
version.workspace = true
description.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
feint-code-gen = { path = "../feint-code-gen" }
feint-util = { path = "../feint-util" }

bitflags.workspace = true
flate2.workspace = true
indexmap.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
once_cell.workspace = true
tar = { workspace = true, default-features = false }

[build-dependencies]
flate2 = { workspace = true, features = ["zlib"], default-features = false }
tar = { workspace = true, default-features = false }
